# commander-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: build-artifacts.yml  copilot-setup-steps.yml  pr-asset-build.yml  release.yml  rust.yml
.pmdaemon/: sleep_10.json  sleep_10.meta.json
src/: main.rs  process_manager.rs  process_server.rs
